cabal-version:  2.4

name:           categorifier-plugin-test
version:        0.1
description:    Framework for testing integration to the plugin.
homepage:       https://github.com/con-kitty/categorifier#readme
bug-reports:    https://github.com/con-kitty/categorifier/issues
build-type:     Simple
tested-with:    GHC==8.10.1, GHC==8.10.7, GHC==9.0.1, GHC==9.2.1, GHC==9.2.2, GHC==9.4.1, GHC==9.4.8

source-repository head
  type: git
  location: https://github.com/con-kitty/categorifier

common options
  ghc-options:
    -- make it possible to inline almost anything
    -fexpose-all-unfoldings
    -- ensure unfoldings are available
    -fno-omit-interface-pragmas
    -Wall

library
  exposed-modules:
      Categorifier.Test.Data
      Categorifier.Test.HList
      Categorifier.Test.Hask
      Categorifier.Test.Term
      Categorifier.Test.Tests
      Categorifier.Test.TH
  other-modules:
      Paths_categorifier_plugin_test
  autogen-modules:
      Paths_categorifier_plugin_test
  ghc-options:
    -O2
    -Wall
  build-depends:
    , PyF >=0.9.0 && <0.12
    , adjunctions >=4.4 && <4.5
    , base >=4.13.0 && <4.18
    , categorifier-category
    , categorifier-client
    , categorifier-common
    , categorifier-hedgehog
    , categorifier-plugin
    , distributive >=0.6.2 && <0.7
    , extra >=1.7.8 && <1.8
    , fin >=0.1.1 && <0.4
    , ghc-prim >=0.5.3 && <0.9
    , hedgehog >=1.0.3 && <1.3
    , template-haskell >=2.15.0 && <2.20
    , text >=1.2.4 && <1.3
    , vec >=0.3 && <0.6
  if impl(ghc >= 9.0.0)
    build-depends: linear-base >=0.2.0 && <0.4
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies

-- run without any explicit integration (uses only bits from base
test-suite default-plugin
  import: options
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Base/Main.hs
  ghc-options:
    -fplugin Categorifier
    -fplugin-opt Categorifier:defer-failures
    -O0
  build-depends:
    , adjunctions >=4.4 && <4.5
    , base >=4.13.0 && <4.18
    , categorifier-category
    , categorifier-client
    , categorifier-hedgehog
    , categorifier-plugin
    , categorifier-plugin-test
    , either >=5.0.1 && <5.1
    , ghc-prim >=0.5.3 && <0.9
    , hedgehog >=1.0.3 && <1.3
    , template-haskell >=2.15.0 && <2.20

test-suite base-hierarchy
  import: options
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Base/Main.hs
  ghc-options:
    -fplugin Categorifier
    -fplugin-opt Categorifier:defer-failures
    -fplugin-opt Categorifier:hierarchy:Categorifier.Hierarchy.baseHierarchy
    -O0
  build-depends:
    , adjunctions >=4.4 && <4.5
    , base >=4.13.0 && <4.18
    , categorifier-category
    , categorifier-client
    , categorifier-hedgehog
    , categorifier-plugin
    , categorifier-plugin-test
    , either >=5.0.1 && <5.1
    , ghc-prim >=0.5.3 && <0.9
    , hedgehog >=1.0.3 && <1.3
    , template-haskell >=2.15.0 && <2.20

test-suite base-hierarchy-optimized
  import: options
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Base/Main.hs
  ghc-options:
    -fplugin Categorifier
    -fplugin-opt Categorifier:defer-failures
    -fplugin-opt Categorifier:hierarchy:Categorifier.Hierarchy.baseHierarchy
    -O2
    -fignore-interface-pragmas
  build-depends:
    , adjunctions >=4.4 && <4.5
    , base >=4.13.0 && <4.18
    , categorifier-category
    , categorifier-client
    , categorifier-hedgehog
    , categorifier-plugin
    , categorifier-plugin-test
    , either >=5.0.1 && <5.1
    , ghc-prim >=0.5.3 && <0.9
    , hedgehog >=1.0.3 && <1.3
    , template-haskell >=2.15.0 && <2.20
