cabal-version:  2.4

name:           categorifier-plugin-test
version:        0.1
description:    Framework for testing integration to the plugin.
homepage:       https://github.com/con-kitty/categorifier#readme
bug-reports:    https://github.com/con-kitty/categorifier/issues
build-type:     Simple
tested-with:    GHC==8.10.1, GHC==8.10.7, GHC==9.0.1, GHC==9.2.1, GHC==9.2.2, GHC==9.2.8

source-repository head
  type: git
  location: https://github.com/con-kitty/categorifier

common defaults
  ghc-options:
    -Wall
  build-depends:
    , adjunctions ^>=4.4
    , base ^>=4.13.0 || ^>=4.14.0 || ^>=4.15.0 || ^>=4.16.0
    , categorifier-category
    , categorifier-client
    , categorifier-common
    , categorifier-hedgehog
    , categorifier-plugin
    , ghc-prim ^>=0.5.3 || ^>=0.6.0 || ^>=0.7.0 || ^>=0.8.0
    , hedgehog ^>=1.0.3 || ^>=1.1 || ^>=1.2
    , template-haskell ^>=2.15.0 || ^>=2.16.0 || ^>=2.17.0 || ^>=2.18.0
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    InstanceSigs
    LambdaCase
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeOperators

library
  import: defaults
  exposed-modules:
      Categorifier.Test.Data
      Categorifier.Test.HList
      Categorifier.Test.Hask
      Categorifier.Test.Term
      Categorifier.Test.Tests
      Categorifier.Test.TH
  other-modules:
      Paths_categorifier_plugin_test
  autogen-modules:
      Paths_categorifier_plugin_test
  ghc-options:
    -O2
  build-depends:
    , PyF ^>=0.9.0 || ^>=0.10.0 || ^>=0.11.0
    , distributive ^>=0.6.2
    , extra ^>=1.7.8
    , fin ^>=0.1.1 || ^>=0.2 || ^>=0.3
    , text ^>=1.2.4
    , vec ^>=0.3 || ^>=0.4 || ^>=0.5
  if impl(ghc >= 9.0.0)
    build-depends: linear-base ^>=0.2.0 || ^>=0.3.0

common tests
  import: defaults
  hs-source-dirs: test
  build-depends:
    , categorifier-plugin-test
    , either ^>=5.0.1
  ghc-options:
    -- make it possible to inline almost anything
    -fexpose-all-unfoldings
    -- ensure unfoldings are available
    -fno-omit-interface-pragmas
    -fplugin Categorifier
    -fplugin-opt Categorifier:defer-failures

-- run without any explicit integration (uses only bits from base
test-suite default-plugin
  import: tests
  type: exitcode-stdio-1.0
  main-is: Base/Main.hs
  ghc-options:
    -O0

common hierarchy-tests
  import: tests
  ghc-options:
    -fplugin-opt Categorifier:hierarchy:Categorifier.Hierarchy.baseHierarchy

test-suite base-hierarchy
  import: hierarchy-tests
  type: exitcode-stdio-1.0
  main-is: Base/Main.hs
  ghc-options:
    -O0

test-suite base-hierarchy-optimized
  import: hierarchy-tests
  type: exitcode-stdio-1.0
  main-is: Base/Main.hs
  ghc-options:
    -O2
