cabal-version:  2.4

name:           kitty-cat-plugin-test
version:        0.1
description:    Framework for testing extensions to the plugin.
homepage:       https://github.com/con-kitty/kitty-cat#readme
bug-reports:    https://github.com/con-kitty/kitty-cat/issues
build-type:     Simple
tested-with:    GHC==8.10.2

source-repository head
  type: git
  location: https://github.com/con-kitty/kitty-cat

library
  exposed-modules:
      Test.Plugin.Data
      Test.Plugin.HList
      Test.Plugin.Hask
      Test.Plugin.Term
      Test.Plugin.Tests
      Test.Plugin.TH
  other-modules:
      Paths_kitty_cat_plugin_test
  autogen-modules:
      Paths_kitty_cat_plugin_test
  ghc-options:
    -O2
    -Wall
  build-depends:
    , adjunctions
    , base
    , distributive
    , extra
    , fin
    , ghc-prim
    , hedgehog
    , kitty-cat-category
    , kitty-cat-client
    , kitty-cat-common
    , kitty-cat-plugin
    , template-haskell
    , text
    , vec
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
