cabal-version:  2.4

name:           kitty-cat-plugin-test
version:        0.1
description:    Framework for testing extensions to the plugin.
homepage:       https://github.com/con-kitty/kitty-cat#readme
bug-reports:    https://github.com/con-kitty/kitty-cat/issues
build-type:     Simple
tested-with:    GHC==8.10.2

source-repository head
  type: git
  location: https://github.com/con-kitty/kitty-cat

common options
  ghc-options:
    -- make it possible to inline almost anything
    -fexpose-all-unfoldings
    -- ensure unfoldings are available
    -fno-omit-interface-pragmas
    -Wall

library
  exposed-modules:
      Test.Plugin.Data
      Test.Plugin.HList
      Test.Plugin.Hask
      Test.Plugin.Term
      Test.Plugin.Tests
      Test.Plugin.TH
  other-modules:
      Paths_kitty_cat_plugin_test
  autogen-modules:
      Paths_kitty_cat_plugin_test
  ghc-options:
    -O2
    -Wall
  build-depends:
    , adjunctions
    , base
    , distributive
    , extra
    , fin
    , ghc-prim
    , hedgehog
    , kitty-cat-category
    , kitty-cat-client
    , kitty-cat-common
    , kitty-cat-plugin
    , template-haskell
    , text
    , vec
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies

-- run without any explicit extensions (uses only bits from base
test-suite default-plugin
  import: options
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test/Plugin/Base/Main.hs
  ghc-options:
    -fplugin Kitty.Plugin
    -fplugin-opt Kitty.Plugin:defer-failures
    -O0
  build-depends:
    , adjunctions
    , base
    , either
    , ghc-prim
    , hedgehog
    , kitty-cat-category
    , kitty-cat-client
    , kitty-cat-plugin
    , kitty-cat-plugin-test
    , template-haskell

test-suite base-hierarchy
  import: options
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test/Plugin/Base/Main.hs
  ghc-options:
    -fplugin Kitty.Plugin
    -fplugin-opt Kitty.Plugin:defer-failures
    -fplugin-opt Kitty.Plugin:hierarchy:Kitty.Plugin.Hierarchy.baseHierarchy
    -O0
  build-depends:
    , adjunctions
    , base
    , either
    , ghc-prim
    , hedgehog
    , kitty-cat-category
    , kitty-cat-client
    , kitty-cat-plugin
    , kitty-cat-plugin-test
    , template-haskell

test-suite base-hierarchy-optimized
  import: options
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test/Plugin/Base/Main.hs
  ghc-options:
    -fplugin Kitty.Plugin
    -fplugin-opt Kitty.Plugin:defer-failures
    -fplugin-opt Kitty.Plugin:hierarchy:Kitty.Plugin.Hierarchy.baseHierarchy
    -O2
    -fignore-interface-pragmas
  build-depends:
    , adjunctions
    , base
    , either
    , ghc-prim
    , hedgehog
    , kitty-cat-category
    , kitty-cat-client
    , kitty-cat-plugin
    , kitty-cat-plugin-test
    , template-haskell
