cabal-version:  2.4

name:           categorifier-plugin
version:        0.1
description:    GHC plugin for Compiling to Categories
homepage:       https://github.com/con-kitty/categorifier#readme
bug-reports:    https://github.com/con-kitty/categorifier/issues
build-type:     Simple
tested-with:    GHC==8.10.1, GHC==8.10.7, GHC==9.0.1, GHC==9.2.1, GHC==9.2.2, GHC==9.2.8

source-repository head
  type: git
  location: https://github.com/con-kitty/categorifier

common defaults
  ghc-options:
    -Wall
  build-depends:
    , base ^>=4.13.0 || ^>=4.14.0 || ^>=4.15.0 || ^>=4.16.0
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies

library
  import: defaults
  exposed-modules:
      Categorifier
      -- __NB__: Only public for runtime lookup
      Categorifier.Core.Base
      Categorifier.Categorify
      -- __TODO__: move ...Categorify to other-modules
      Categorifier.Core.Categorify
      -- __TODO__: move ...Functions to other-modules
      Categorifier.Core.Functions
      Categorifier.Core.MakerMap
      Categorifier.Core.Makers
      -- __TODO__: move ...PrimOp to other-modules
      Categorifier.Core.PrimOp
      Categorifier.Core.Types
      Categorifier.Hierarchy
  other-modules:
      Categorifier.Benchmark
      Categorifier.CommandLineOptions
      Categorifier.Core
      Categorifier.Core.Benchmark
      Categorifier.Core.BuildDictionary
      Categorifier.Core.ErrorHandling
      Categorifier.Core.Trace
      Paths_categorifier_plugin
  autogen-modules:
      Paths_categorifier_plugin
  ghc-options:
    -O2
    -fignore-interface-pragmas
  build-depends:
    , PyF ^>=0.9.0 || ^>=0.10.0 || ^>=0.11.0
    , barbies ^>=2.0.1
    , bytestring ^>=0.10.9 || ^>=0.11.0
    , categorifier-category
    , categorifier-client
    , categorifier-common
    , categorifier-duoids
    , categorifier-ghc
    , categorifier-th
    , containers ^>=0.6.2
    , either ^>=5.0.1
    , extra ^>=1.7.8
    , ghc ^>=8.8.1 || ^>=8.10.1 || ^>=9.0.1 || ^>=9.2.1
    , ghc-prim ^>=0.5.3 || ^>=0.6.0 || ^>=0.7.0 || ^>=0.8.0
    , semialign ^>=1.1 || ^>=1.2 || ^>=1.3
    , semigroupoids ^>=5.3.4
    , syb ^>=0.7.1
    , template-haskell ^>=2.15.0 || ^>=2.16.0 || ^>=2.17.0 || ^>=2.18.0
    , text ^>=1.2.4
    , these ^>=1.1.1 || ^>=1.2
    , transformers ^>=0.5.6 || ^>=0.6.0
    , uniplate ^>=1.6.13
    , yaya ^>=0.3.2 || ^>=0.4.0
