cabal-version:  2.4

name:           kitty-cat-plugin
version:        0.1
description:    GHC plugin for Compiling to Categories
homepage:       https://github.com/con-kitty/kitty-cat#readme
bug-reports:    https://github.com/con-kitty/kitty-cat/issues
build-type:     Simple
tested-with:    GHC==8.10.2

source-repository head
  type: git
  location: https://github.com/con-kitty/kitty-cat

library
  exposed-modules:
      Kitty.MakePlugin
      -- __NB__: Only public for runtime lookup
      Kitty.Plugin.Core.Base
      Kitty.Plugin.Categorize
      -- __TODO__: move ...Categorize to other-modules
      Kitty.Plugin.Core.Categorize
      -- __TODO__: move ...Functions to other-modules
      Kitty.Plugin.Core.Functions
      Kitty.Plugin.Core.MakerMap
      Kitty.Plugin.Core.Makers
      -- __TODO__: move ...PrimOp to other-modules
      Kitty.Plugin.Core.PrimOp
      -- __TODO__: move ...Simplify to other-modules
      Kitty.Plugin.Core.Simplify
      Kitty.Plugin.Core.Types
      Kitty.Plugin.Hierarchy
  other-modules:
      Kitty.Benchmark
      Kitty.Plugin.CommandLineOptions
      Kitty.Plugin.Core
      Kitty.Plugin.Core.Benchmark
      Kitty.Plugin.Core.BuildDictionary
      Kitty.Plugin.Core.ErrorHandling
      Kitty.Plugin.Core.Trace
      Kitty.Plugin.TH
      Paths_kitty_cat_plugin
  autogen-modules:
      Paths_kitty_cat_plugin
  ghc-options:
    -O2
    -fignore-interface-pragmas
    -Wall
  build-depends:
    , PyF
    , adjunctions
    , barbies
    , base
    , bytestring
    , concat-classes
    , containers
    , either
    , extra
    , ghc
    , ghc-prim
    , kitty-cat-category
    , kitty-cat-client
    , kitty-cat-common
    , kitty-cat-duoids
    , semialign
    , semigroupoids
    , syb
    , template-haskell
    , text
    , these
    , transformers
    , uniplate
    , yaya
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
