cabal-version:  2.4

name:           categorifier-th
version:        0.1
description:    template-haskell extensions for Categorifier
homepage:       https://github.com/con-kitty/categorifier#readme
bug-reports:    https://github.com/con-kitty/categorifier/issues
build-type:     Simple
tested-with:    GHC==8.8.4, GHC==8.10.1, GHC==8.10.7, GHC==9.0.1, GHC==9.2.1, GHC==9.2.2

source-repository head
  type: git
  location: https://github.com/con-kitty/categorifier

library
  exposed-modules:
      Categorifier.TH
      Paths_categorifier_th
  autogen-modules:
      Paths_categorifier_th
  ghc-options:
    -O2
    -fignore-interface-pragmas
    -Wall
  build-depends:
    , PyF >=0.9.0 && <0.12
    , base >=4.13.0 && <4.17
    , categorifier-common
    , categorifier-duoids
    , containers >=0.6.2 && <0.7
    , semialign >=1.1.0 && <1.4
    , template-haskell >=2.15.0 && <2.19
    , these >=1.1.1 && <1.3
    , transformers >=0.5.6 && <0.7
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
