cabal-version:  2.4

name:           categorifier-th
version:        0.1
description:    template-haskell extensions for Categorifier
homepage:       https://github.com/con-kitty/categorifier#readme
bug-reports:    https://github.com/con-kitty/categorifier/issues
build-type:     Simple
tested-with:    GHC==8.10.1, GHC==8.10.7, GHC==9.0.1, GHC==9.2.1, GHC==9.2.2, GHC==9.2.8

source-repository head
  type: git
  location: https://github.com/con-kitty/categorifier

common defaults
  ghc-options:
    -Wall
  build-depends:
    , base ^>=4.13.0 || ^>=4.14.0 || ^>=4.15.0 || ^>=4.16.0
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies

library
  import: defaults
  exposed-modules:
      Categorifier.TH
      Paths_categorifier_th
  autogen-modules:
      Paths_categorifier_th
  ghc-options:
    -O2
    -fignore-interface-pragmas
  build-depends:
    , PyF ^>=0.9.0 || ^>=0.10.0 || ^>=0.11.0
    , categorifier-common
    , categorifier-duoids
    , containers ^>=0.6.2
    , semialign ^>=1.1 || ^>=1.2 || ^>=1.3
    , template-haskell ^>=2.15.0 || ^>=2.16.0 || ^>=2.17.0 || ^>=2.18.0
    , these ^>=1.1.1 || ^>=1.2
    , transformers ^>=0.5.6 || ^>=0.6.0
