cabal-version:  2.4

name:           kitty-cat-adjunctions-extensions-test
version:        0.1
description:    Plugin using our extensions to Conal's ConCat functions.
homepage:       https://github.com/con-kitty/kitty-cat#readme
bug-reports:    https://github.com/con-kitty/kitty-cat/issues
build-type:     Simple
tested-with:    GHC==8.10.2

source-repository head
  type: git
  location: https://github.com/con-kitty/kitty-cat

common options
  ghc-options:
    -- make it possible to inline almost anything
    -fexpose-all-unfoldings
    -- ensure unfoldings are available
    -fno-omit-interface-pragmas
    -Wall

library
  exposed-modules:
      Kitty.Plugin.Test.Adjunctions
  build-depends:
    , adjunctions
    , base
    , kitty-cat-plugin-test
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies

test-suite adjunctions-hierarchy
  import: options
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Adjunctions/Main.hs
  ghc-options:
    -fplugin Kitty.Plugin
    -fplugin-opt Kitty.Plugin:defer-failures
    -fplugin-opt Kitty.Plugin:hierarchy:Kitty.Plugin.Adjunctions.Extensions.hierarchy
    -fplugin-opt Kitty.Plugin:hierarchy:Kitty.Plugin.Hierarchy.baseHierarchy
    -- need `curry` for some tests, so we add the categories hierarchy
    -fplugin-opt Kitty.Plugin:hierarchy:Kitty.Plugin.Hierarchy.Categories.hierarchy
    -fplugin-opt Kitty.Plugin:maker-map:Kitty.Plugin.Adjunctions.Extensions.makerMapFun
    -fplugin-opt Kitty.Plugin:maker-map:Kitty.Plugin.Core.MakerMap.baseMakerMapFun
    -O0
  build-depends:
    , adjunctions
    , base
    , categories
    , ghc-prim
    , hedgehog
    , kitty-cat-adjunctions-extensions
    , kitty-cat-adjunctions-extensions-test
    , kitty-cat-categories-extensions
    , kitty-cat-categories-extensions-test
    , kitty-cat-category
    , kitty-cat-client
    , kitty-cat-hedgehog
    , kitty-cat-plugin
    , kitty-cat-plugin-test
    , template-haskell

test-suite adjunctions-hierarchy-optimized
  import: options
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Adjunctions/Main.hs
  ghc-options:
    -fplugin Kitty.Plugin
    -fplugin-opt Kitty.Plugin:hierarchy:Kitty.Plugin.Adjunctions.Extensions.hierarchy
    -fplugin-opt Kitty.Plugin:hierarchy:Kitty.Plugin.Hierarchy.baseHierarchy
    -- need `curry` for some tests, so we add the categories hierarchy
    -fplugin-opt Kitty.Plugin:hierarchy:Kitty.Plugin.Hierarchy.Categories.hierarchy
    -fplugin-opt Kitty.Plugin:maker-map:Kitty.Plugin.Adjunctions.Extensions.makerMapFun
    -fplugin-opt Kitty.Plugin:maker-map:Kitty.Plugin.Core.MakerMap.baseMakerMapFun
    -O2
    -fignore-interface-pragmas
  build-depends:
    , adjunctions
    , base
    , categories
    , ghc-prim
    , hedgehog
    , kitty-cat-adjunctions-extensions
    , kitty-cat-adjunctions-extensions-test
    , kitty-cat-categories-extensions
    , kitty-cat-categories-extensions-test
    , kitty-cat-category
    , kitty-cat-client
    , kitty-cat-hedgehog
    , kitty-cat-plugin
    , kitty-cat-plugin-test
    , template-haskell
