cabal-version:  2.4

name:           kitty-cat-adjunctions-extensions
version:        0.1
description:    Extensions to Conal's ConCat to improve plugin coverage.
homepage:       https://github.com/con-kitty/kitty-cat#readme
bug-reports:    https://github.com/con-kitty/kitty-cat/issues
build-type:     Simple
tested-with:    GHC==8.10.2

source-repository head
  type: git
  location: https://github.com/con-kitty/kitty-cat

library
  exposed-modules:
      Kitty.Plugin.Adjunctions.Extensions
  other-modules:
      Paths_kitty_cat_adjunctions_extensions
  autogen-modules:
      Paths_kitty_cat_adjunctions_extensions
  ghc-options: -Wall
  build-depends:
    , adjunctions
    , base
    , containers
    , ghc
    , kitty-cat-duoids
    , kitty-cat-plugin
    , template-haskell
    , transformers
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
