cabal-version:  2.4

name:           categorifier-adjunctions-integration-test
version:        0.1
description:    Test utilities for categorifier's adjunctions integration.
homepage:       https://github.com/con-kitty/categorifier#readme
bug-reports:    https://github.com/con-kitty/categorifier/issues
build-type:     Simple
tested-with:    GHC==8.10.1, GHC==8.10.7, GHC==9.0.1, GHC==9.2.1, GHC==9.2.2, GHC==9.2.8

source-repository head
  type: git
  location: https://github.com/con-kitty/categorifier

common defaults
  ghc-options:
    -Wall
  build-depends:
    , adjunctions >=4.4 && <4.5
    , base >=4.13.0 && <4.17
    , categorifier-plugin-test
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies

library
  import: defaults
  exposed-modules:
      Categorifier.Test.Adjunctions

common hierarchy-tests
  import: defaults
  hs-source-dirs: test
  ghc-options:
    -- make it possible to inline almost anything
    -fexpose-all-unfoldings
    -- ensure unfoldings are available
    -fno-omit-interface-pragmas
    -fplugin Categorifier
    -fplugin-opt Categorifier:defer-failures
    -fplugin-opt Categorifier:hierarchy:Categorifier.Adjunctions.Integration.hierarchy
    -fplugin-opt Categorifier:hierarchy:Categorifier.Hierarchy.baseHierarchy
    -- need `curry` for some tests, so we add the categories hierarchy
    -fplugin-opt Categorifier:hierarchy:Categorifier.Hierarchy.Categories.hierarchy
    -fplugin-opt Categorifier:maker-map:Categorifier.Adjunctions.Integration.makerMapFun
    -fplugin-opt Categorifier:maker-map:Categorifier.Core.MakerMap.baseMakerMapFun
  build-depends:
    , categories >=1.0.7 && <1.1
    , categorifier-adjunctions-integration
    , categorifier-adjunctions-integration-test
    , categorifier-categories-integration
    , categorifier-categories-integration-test
    , categorifier-category
    , categorifier-client
    , categorifier-hedgehog
    , categorifier-plugin
    , ghc-prim >=0.5.3 && <0.9
    , hedgehog >=1.0.3 && <1.3
    , template-haskell >=2.15.0 && <2.19

test-suite adjunctions-hierarchy
  import: hierarchy-tests
  type: exitcode-stdio-1.0
  main-is: Adjunctions/Main.hs
  ghc-options:
    -O0

test-suite adjunctions-hierarchy-optimized
  import: hierarchy-tests
  type: exitcode-stdio-1.0
  main-is: Adjunctions/Main.hs
  ghc-options:
    -O2
    -fignore-interface-pragmas
