cabal-version:  2.4

name:           kitty-cat-plugin-base
version:        0.1
description:    Plugin using only the base library classes.
homepage:       https://github.com/con-kitty/kitty-cat#readme
bug-reports:    https://github.com/con-kitty/kitty-cat/issues
build-type:     Simple
tested-with:    GHC==8.10.2

source-repository head
  type: git
  location: https://github.com/con-kitty/kitty-cat

common options
  ghc-options:
    -- make it possible to inline almost anything
    -fexpose-all-unfoldings
    -- ensure unfoldings are available
    -fno-omit-interface-pragmas
    -Wall

library
  import: options
  exposed-modules:
      Kitty.Plugin.Base
  other-modules:
      Paths_kitty_cat_plugin_base
  autogen-modules:
      Paths_kitty_cat_plugin_base
  build-depends:
    , base
    , ghc
    , kitty-cat-plugin
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies

test-suite base-hierarchy
  import: options
  type:        exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:     Test/Plugin/Base/Main.hs
  ghc-options:
    -fplugin Kitty.Plugin.Base
    -fplugin-opt Kitty.Plugin.Base:defer-failures
    -O0
  build-depends:
    , adjunctions
    , base
    , either
    , ghc-prim
    , hedgehog
    , kitty-cat-category
    , kitty-cat-client
    , kitty-cat-plugin
    , kitty-cat-plugin-base
    , kitty-cat-plugin-test
    , template-haskell

test-suite base-hierarchy-optimized
  import: options
  type:        exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:     Test/Plugin/Base/Main.hs
  ghc-options:
    -fplugin Kitty.Plugin.Base
    -fplugin-opt Kitty.Plugin.Base:defer-failures
    -O2
    -fignore-interface-pragmas
  build-depends:
    , adjunctions
    , base
    , either
    , ghc-prim
    , hedgehog
    , kitty-cat-category
    , kitty-cat-client
    , kitty-cat-plugin
    , kitty-cat-plugin-base
    , kitty-cat-plugin-test
    , template-haskell
